fix for background on mobiles

--- a/public/indexHTML.css
+++ b/public/indexHTML.css
@@ -1,7 +1,15 @@
-body{
-    background-image: url('./src/Images/reelImage.jpg'); 
-    background-size: 100vw 100vh; 
-    background-repeat: no-repeat;
-    background-attachment: fixed;
+body:before {
+  content: "";
+  display: block;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -10;
+  background: url('./src/Images/reelImage.jpg') no-repeat center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
-
